# ndarray-ode

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: solver.rs
examples/keppler/: Cargo.toml  plot_keppler.py
examples/keppler/src/: main.rs
src/: ad.rs  lib.rs  ode.rs  plot.rs  prelude.rs
src/ad/: jacobian.rs  ops.rs
src/ode/: one_step.rs  root_finder.rs  solver.rs  traits.rs  two_step.rs
src/ode/solver/: euler.rs
src/ode/solver/euler/: explicit.rs  implicit.rs  symplectic.rs
src/plot/: dataframe.rs  series.rs
