[package]
name = "ndarray-ode"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Buchner <patrick.buchner@mailbox.org"]
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false
description = "ODE Solver based on ndarray ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
polars = { version = "0.26.1", features = ["parquet"] }
rayon = "1.6.1"
tqdm = "0.4.3"

[dev-dependencies]
criterion = "0.4"
rstest = "0.16.0"
proptest = "1.0.0"
openblas-src = { version = "0.10.8", features = ["static"] }

[[bench]]
name = "solver"
harness = false


[workspace]
members = ["examples/*"]

[profile.release]
debug = true

