[package]
name = "keppler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-ode = { version = "0.1", path = "../../" }
itertools = "0.10.5"
rayon = "1.6.1"
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }


# [profile.release]
# debug = true